--- a/requirements.txt
+++ b/requirements.txt
@@ -37,11 +37,8 @@ lazy-object-proxy==1.4.0
 Mako==1.1.3
 MarkupSafe==2.1.1
 mccabe==0.6.1
-numpy==1.22.3
 packaging==21.3
-pandas==1.4.2
 pep8==1.7.1
-phonenumbers==8.12.54
 platformdirs==2.5.2
 pluggy==1.0.0
 postgres==4.0
@@ -56,8 +53,6 @@ pyparsing==3.0.9
 pytest==6.2.5
 python-dotenv==0.20.0
 python-editor==1.0.4
-python-jose==3.3.0
-python-jose-cryptodome==1.3.2
 pytz==2022.2.1
 rsa==4.9
 six==1.12.0
@@ -67,3 +62,4 @@ Werkzeug==2.2.2
 Flask-CacheControl==0.3.0
 flasgger==0.9.5
 Faker==14.2.0
+sqlalchemy==1.3.23
